fix: Revert slideshow alignment

--- a/webapp/src/components/HomePage/Slideshow/Slideshow.css
+++ b/webapp/src/components/HomePage/Slideshow/Slideshow.css
@@ -21,7 +21,7 @@
 }
 
 .Slideshow .assets.full-width {
-  justify-content: center;
+  justify-content: space-between;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -183,7 +183,7 @@
     flex-direction: row;
     align-items: center;
   }
-  
+
   .Slideshow .ItemsSection {
     display: flex;
     align-items: center;
